--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.11",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "22.13.9",
     "@types/react": "19.0.10",
     "autoprefixer": "^10.4.20",
