--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "next": "^15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "usehooks-ts": "^3.1.1"
   },
