--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "dependencies": {
     "@directus/sdk": "^19.0.1",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.477.0",
-    "next": "^16.0.3",
-    "postcss": "^8.5.3",
-    "react": "^19.2.0",
+    "lucide-react": "^0.555.0",
+    "next": "^16.0.7",
+    "postcss": "^8.5.6",
+    "react": "^19.2.1",
     "react-confetti": "^6.4.0",
-    "react-dom": "^19.2.0",
+    "react-dom": "^19.2.1",
     "usehooks-ts": "^3.1.1"
   },
   "scripts": {
@@ -26,6 +26,6 @@
     "framer-motion": "^12.4.10",
     "tailwindcss": "^4.0.11",
     "tsx": "^4.19.2",
-    "typescript": "5.8.2"
+    "typescript": "^5.9.3"
   }
 }
